--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+* {
+    box-sizing: border-box;
+}
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #333;
+    color: #f5f5f5;
+    font-size: 16px;
+    line-height: 1.5;
+    overflow-x: hidden;
+}
