--- a/src/Styles/Articles.css
+++ b/src/Styles/Articles.css
@@ -6,33 +6,39 @@
 
 .articles-row {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 1rem;
+    /* Wrap after 4 elements in a row */
+    flex-wrap: wrap;
+
 }
 
 .article {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    margin-right: 1rem;
-    padding: 1rem;
+    width: 24%;
+    margin-right: 1%;
+    margin-bottom: 20px;
+    /* padding: 1rem; */
     border-radius: 10px;
     background-color: #282c38;
     color: #fff;
     cursor: pointer;
+
 }
+
 
 .thumbnail img {
     width: 100%;
     height: 200px;
     object-fit: cover;
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .information {
     display: flex;
     flex-direction: column;
+    margin: 1rem;
 }
 
 .meta {
