--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -4,18 +4,28 @@ nav {
     align-items: center;
     padding: 0rem 2rem;
     height: 100px;
+    border-bottom: 1px solid #a5a5a5;
 }
 
 nav h3 {
-    font-size: 1.5rem;
-    color: yellow;
+    color: rgb(255, 187, 41);
     text-transform: capitalize;
+    white-space: nowrap;
+    font-family: 'Clash Display', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: 0em;
+    text-align: left;
+
 }
 
 .nav-links {
     display: flex;
     justify-content: space-between;
     width: 85%;
+    flex-wrap: wrap;
+
 }
 
 .nav-link {
@@ -25,15 +35,20 @@ nav h3 {
 }
 
 .nav-link a {
-    color: #fff;
+    color: #a5a5a5;
     text-decoration: none;
     font-size: 1.2rem;
     padding: 0 1rem;
+    font-size: 0.9rem;
+}
+
+.nav-link a:last-child {
+    color: rgb(255, 187, 41);
 }
 
 .nav-link svg {
-    height: 1.5rem;
-    width: 1.5rem;
+    height: 1.25rem;
+    width: 1.25rem;
     margin: 0 1rem;
 }
 
