--- a/src/Styles/SearchBar.css
+++ b/src/Styles/SearchBar.css
@@ -2,10 +2,16 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 215px;
     border-radius: 5px;
     padding: 1rem 2rem;
     margin: 10px 0px;
+}
+
+.search-bar h1 {
+    font-family: 'Poppins';
+    line-height: 60px;
+    font-style: normal;
+    font-weight: 600;
 }
 
 .container {
@@ -15,7 +21,7 @@
     align-items: center;
 }
 
-.search-box input {
+.search-box {
     width: 450px;
     height: 40px;
     border-radius: 5px;
@@ -25,10 +31,25 @@
     border: none;
     background-color: #282c38;
     color: #fff;
+    display: flex;
 }
 
-.search-box input:focus {
-    border: 1px solid #3f51b5;
+.search-box svg {
+    height: 1.75rem;
+    width: 1.75rem;
+    transform: translateY(6px);
+    margin-right: .5rem;
+    color: #a5a5a5;
+}
+
+.search-box input {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    color: #fff;
+    outline: none;
+    border: none;
+    font-size: 1rem;
 }
 
 .layouts {
