--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@100&display=swap');
+
 * {
     box-sizing: border-box;
 }
 
 html,
 body {
+    font-family: 'Poppins';
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
-    background-color: #333;
+    background-color: rgb(29, 31, 37);
     color: #f5f5f5;
     font-size: 16px;
     line-height: 1.5;
