--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
+html::-webkit-scrollbar {
+    display: none;
+}
+
+html {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
 html,
 body {
     font-family: 'Poppins';
