--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -42,6 +42,11 @@ nav h3 {
     font-size: 0.9rem;
 }
 
+.nav-link a:hover {
+    text-decoration: solid underline rgb(255, 187, 41);
+
+}
+
 .nav-link a:last-child {
     color: rgb(255, 187, 41);
 }
